--- a/crue10/data/templates/dcsp.xml
+++ b/crue10/data/templates/dcsp.xml
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <DCSP xmlns="http://www.fudaa.fr/xsd/crue" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.fudaa.fr/xsd/crue http://www.fudaa.fr/xsd/crue/dcsp-1.2.xsd">
-  <Commentaire></Commentaire>
+  <Commentaire>{{ comment }}</Commentaire>
   <DonCalcSansPrtBranches>
     {%- for branche in branche_list %}
     {%- if branche.type == 1 %}
     <DonCalcSansPrtBranchePdc NomRef="{{ branche.id }}">
       <Pdc Nom="{{ branche.name_loi_LoiQPdc }}" Type="LoiQPdc">
-        <Commentaire></Commentaire>
+        <Commentaire>{{ branche.comment }}</Commentaire>
         <EvolutionFF>
           {%- for q, dz in branche.loi_QPdc %}
           <PointFF>{{ q }} {{ dz }}</PointFF>
@@ -58,7 +58,7 @@
       <QLimInf>{{ branche.QLimInf }}</QLimInf>
       <QLimSup>{{ branche.QLimSup }}</QLimSup>
       <RegimeNoye Nom="{{ branche.name_loi_QDz }}" Type="LoiQDz">
-        <Commentaire></Commentaire>
+        <Commentaire>{{ branche.comment }}</Commentaire>
         <EvolutionFF>
           {%- for q, dz in branche.loi_QDz %}
           <PointFF>{{ q }} {{ dz }}</PointFF>
@@ -66,7 +66,7 @@
         </EvolutionFF>
       </RegimeNoye>
       <RegimeDenoye Nom="{{ branche.name_loi_QpilZam }}" Type="LoiQpilZam">
-        <Commentaire></Commentaire>
+        <Commentaire>{{ branche.comment }}</Commentaire>
         <EvolutionFF>
           {%- for q, zam in branche.loi_QpilZam %}
           <PointFF>{{ q }} {{ zam }}</PointFF>
@@ -87,7 +87,7 @@
       </ElemSeuil>
       {%- endfor %}
       <RegimeDenoye Nom="{{ branche.name_loi_QZam }}" Type="LoiQpilZam">
-        <Commentaire></Commentaire>
+        <Commentaire>{{ branche.comment }}</Commentaire>
         <EvolutionFF>
           {%- for q, zam in branche.loi_QZam %}
           <PointFF>{{ q }} {{ zam }}</PointFF>
