--- a/crue10/data/templates/dcsp.xml
+++ b/crue10/data/templates/dcsp.xml
@@ -6,7 +6,7 @@
     {%- if branche.type == 1 %}
     <DonCalcSansPrtBranchePdc NomRef="{{ branche.id }}">
       <Pdc Nom="{{ branche.name_loi_LoiQPdc }}" Type="LoiQPdc">
-        <Commentaire>{{ branche.comment }}</Commentaire>
+        <Commentaire>{# Not supported #}</Commentaire>
         <EvolutionFF>
           {%- for q, dz in branche.loi_QPdc %}
           <PointFF>{{ q }} {{ dz }}</PointFF>
@@ -14,8 +14,7 @@
         </EvolutionFF>
       </Pdc>
     </DonCalcSansPrtBranchePdc>
-    {%- endif %}
-    {%- if branche.type == 2 %}
+    {%- elif branche.type == 2 %}
     <DonCalcSansPrtBrancheSeuilTransversal NomRef="{{ branche.id }}">
       <FormulePdc>{{ branche.formule_pdc }}</FormulePdc>
       {%- for larg, z_seuil, coeff_d, coeff_pdc in branche.elts_seuil %}
@@ -27,8 +26,7 @@
       </ElemSeuilAvecPdc>
       {%- endfor %}
     </DonCalcSansPrtBrancheSeuilTransversal>
-    {%- endif %}
-    {%- if branche.type == 4 %}
+    {%- elif branche.type == 4 %}
     <DonCalcSansPrtBrancheSeuilLateral NomRef="{{ branche.id }}">
       <FormulePdc>{{ branche.formule_pdc }}</FormulePdc>
       {%- for larg, z_seuil, coeff_d, coeff_pdc in branche.elts_seuil %}
@@ -40,8 +38,7 @@
       </ElemSeuilAvecPdc>
       {%- endfor %}
     </DonCalcSansPrtBrancheSeuilLateral>
-    {%- endif %}
-    {%- if branche.type == 5 %}
+    {%- elif branche.type == 5 %}
     <DonCalcSansPrtBrancheOrifice NomRef="{{ branche.id }}">
       <ElemOrifice>
         <CoefCtrLim>{{ branche.CoefCtrLim }}</CoefCtrLim>
@@ -52,13 +49,25 @@
         <SensOrifice>{{ branche.SensOrifice }}</SensOrifice>
       </ElemOrifice>
     </DonCalcSansPrtBrancheOrifice>
-    {%- endif %}
-    {%- if branche.type == 14 %}
+    {%- elif branche.type == 12 %}
+    <DonCalcSansPrtBrancheNiveauxAssocies NomRef="{{ branche.id }}">
+      <QLimInf>{{ branche.QLimInf }}</QLimInf>
+      <QLimSup>{{ branche.QLimSup }}</QLimSup>
+      <Zasso Nom="{{ branche.name_loi_ZavZam }}" Type="LoiZavZam">
+        <Commentaire>{# Not supported #}</Commentaire>
+        <EvolutionFF>
+          {%- for z_am, z_av in branche.loi_ZavZam %}
+          <PointFF>{{ z_am }} {{ z_av }}</PointFF>
+          {%- endfor %}
+        </EvolutionFF>
+      </Zasso>
+    </DonCalcSansPrtBrancheNiveauxAssocies>
+    {%- elif branche.type == 14 %}
     <DonCalcSansPrtBrancheBarrageGenerique NomRef="{{ branche.id }}">
       <QLimInf>{{ branche.QLimInf }}</QLimInf>
       <QLimSup>{{ branche.QLimSup }}</QLimSup>
       <RegimeNoye Nom="{{ branche.name_loi_QDz }}" Type="LoiQDz">
-        <Commentaire>{{ branche.comment }}</Commentaire>
+        <Commentaire>{# Not supported #}</Commentaire>
         <EvolutionFF>
           {%- for q, dz in branche.loi_QDz %}
           <PointFF>{{ q }} {{ dz }}</PointFF>
@@ -66,7 +75,7 @@
         </EvolutionFF>
       </RegimeNoye>
       <RegimeDenoye Nom="{{ branche.name_loi_QpilZam }}" Type="LoiQpilZam">
-        <Commentaire>{{ branche.comment }}</Commentaire>
+        <Commentaire>{# Not supported #}</Commentaire>
         <EvolutionFF>
           {%- for q, zam in branche.loi_QpilZam %}
           <PointFF>{{ q }} {{ zam }}</PointFF>
@@ -87,7 +96,7 @@
       </ElemSeuil>
       {%- endfor %}
       <RegimeDenoye Nom="{{ branche.name_loi_QZam }}" Type="LoiQpilZam">
-        <Commentaire>{{ branche.comment }}</Commentaire>
+        <Commentaire>{# Not supported #}</Commentaire>
         <EvolutionFF>
           {%- for q, zam in branche.loi_QZam %}
           <PointFF>{{ q }} {{ zam }}</PointFF>
