--- a/crue10/data/templates/dcsp.xml
+++ b/crue10/data/templates/dcsp.xml
@@ -6,7 +6,7 @@
     {%- if branche.type == 1 %}
     <DonCalcSansPrtBranchePdc NomRef="{{ branche.id }}">
       <Pdc Nom="{{ branche.name_loi_LoiQPdc }}" Type="LoiQPdc">
-        <Commentaire>{# Not supported #}</Commentaire>
+        <Commentaire>{{ branche.comment_loi }}</Commentaire>
         <EvolutionFF>
           {%- for q, dz in branche.loi_QPdc %}
           <PointFF>{{ q }} {{ dz }}</PointFF>
@@ -54,7 +54,7 @@
       <QLimInf>{{ branche.QLimInf|float2str }}</QLimInf>
       <QLimSup>{{ branche.QLimSup|float2str }}</QLimSup>
       <Zasso Nom="{{ branche.name_loi_ZavZam }}" Type="LoiZavZam">
-        <Commentaire>{# Not supported #}</Commentaire>
+        <Commentaire>{{ branche.comment_loi }}</Commentaire>
         <EvolutionFF>
           {%- for z_am, z_av in branche.loi_ZavZam %}
           <PointFF>{{ z_am }} {{ z_av }}</PointFF>
@@ -67,7 +67,7 @@
       <QLimInf>{{ branche.QLimInf|float2str }}</QLimInf>
       <QLimSup>{{ branche.QLimSup|float2str }}</QLimSup>
       <RegimeNoye Nom="{{ branche.name_loi_QDz }}" Type="LoiQDz">
-        <Commentaire>{# Not supported #}</Commentaire>
+        <Commentaire>{{ branche.comment_noye }}</Commentaire>
         <EvolutionFF>
           {%- for q, dz in branche.loi_QDz %}
           <PointFF>{{ q }} {{ dz }}</PointFF>
@@ -75,7 +75,7 @@
         </EvolutionFF>
       </RegimeNoye>
       <RegimeDenoye Nom="{{ branche.name_loi_QpilZam }}" Type="LoiQpilZam">
-        <Commentaire>{# Not supported #}</Commentaire>
+        <Commentaire>{{ branche.comment_denoye }}</Commentaire>
         <EvolutionFF>
           {%- for q, zam in branche.loi_QpilZam %}
           <PointFF>{{ q }} {{ zam }}</PointFF>
@@ -96,7 +96,7 @@
       </ElemSeuil>
       {%- endfor %}
       <RegimeDenoye Nom="{{ branche.name_loi_QZam }}" Type="LoiQpilZam">
-        <Commentaire>{# Not supported #}</Commentaire>
+        <Commentaire>{{ branche.comment_denoye }}</Commentaire>
         <EvolutionFF>
           {%- for q, zam in branche.loi_QZam %}
           <PointFF>{{ q }} {{ zam }}</PointFF>
